--- a/app/src/main/res/layout/activity_winner.xml
+++ b/app/src/main/res/layout/activity_winner.xml
@@ -58,9 +58,9 @@
 
     <Button
         android:id="@+id/confettiButton"
-        android:layout_width="218dp"
-        android:layout_height="70dp"
-        android:text="Klik for konfetti og lyd!"
+        android:layout_width="196dp"
+        android:layout_height="62dp"
+        android:text="Klik for konfetti!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.453"
